--- a/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
+++ b/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
@@ -7,18 +7,18 @@
       <div class="teaser">
 
       {% if current_object.pretitle %} <span class="pretitle"><a name="editorial">{% trans current_object.pretitle %}</a></span>{% endif %}
-      <h2 class="title"><a name="article__{{ current_object.slug }}" href="{% url article-detail current_object.slug %}">
+      <h2 class="title"><a name="article__{{ current_object.slug }}" href="{% url 'article-detail' current_object.slug %}">
         {% trans current_object.name  %}</a></h2>
 
       {% if current_object.pictures.values %}
       {% with picture=current_object.pictures.values|first %}
-      <a href="{% url article-detail article.slug %}">
+      <a href="{% url 'article-detail' article.slug %}">
         <img class="newsletter_image" src="{% version picture.image 'newsletter_teaser' %}" alt="{{ picture.name }}"/>
       </a>
       {% endwith %}
       {% endif %}
 
-      <a href="{% url article-detail article.slug %}">
+      <a href="{% url 'article-detail' article.slug %}">
         <div class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</div>
       </a>
       <div class="download_link"><a href="{{ article.get_absolute_url }}"> {% trans "Open" %}</a></div>
