--- a/cyclope/core/collections/templates/collections/collection_root_categories_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_list.html
@@ -6,7 +6,7 @@
   <ul>
   {% for category in categories %}
   <li>
-    <a href="{% url category-teaser_list category.slug %}">{{ category.name }}</a>
+    <a href="{% url 'category-teaser_list' category.slug %}">{{ category.name }}</a>
   </li>
 {% endfor %}
 </ul>
