--- a/cyclope/templates/rosetta/base.html
+++ b/cyclope/templates/rosetta/base.html
@@ -27,7 +27,7 @@
         <div id="header">
             {% block header %}
             <div id="branding">
-                <h1 id="site-name"><a href="{% url rosetta-pick-file %}">Cyclope 3</a> </h1>
+                <h1 id="site-name"><a href="{% url 'rosetta-pick-file' %}">Cyclope 3</a> </h1>
             </div>
             {% endblock %}
         </div>
