--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -6,7 +6,7 @@
 {% if not user.is_authenticated and not article.published %}
   <div class="alert alert-danger" role="alert">
 		<span class="glyphicon glyphicon-ban-circle"></span>
-			<a href="{% url auth_login %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}
+			<a href="{% url 'auth_login' %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}
 		</a>
 	</div>
 {% else %}
