--- a/cyclope/apps/dynamicforms/templates/admin/forms/change_form.html
+++ b/cyclope/apps/dynamicforms/templates/admin/forms/change_form.html
@@ -7,7 +7,7 @@
 {% if change %}{% if not is_popup %}
 <ul class="object-tools">
     <li>
-        <a href="{% url "admin:form_entries" object_id %}">{% trans "View entries" %}</a>
+        <a href="{% url 'admin:form_entries' object_id %}">{% trans "View entries" %}</a>
     </li>
     <li>
         <a href="history/" class="historylink">{% trans "History" %}</a>
