--- a/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
@@ -1,6 +1,6 @@
 {% load fb_versions %}
 
-<form method="POST" action="{% url pictures-delete article_id=article_id %}">
+<form method="POST" action="{% url 'pictures-delete' article_id=article_id %}">
     {% csrf_token %}
     <table class="table table-striped table-condensed">                
         {% for picture in delete_page %}
