--- a/cyclope/apps/media_widget/templates/media_widget/picture_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_select.html
@@ -2,7 +2,7 @@
 
 {% include "media_widget/pagination_header.html" with widget='pictures' pagina=select_page %}
 
-<form method="POST" action="{% url pictures-update article_id=article_id %}">
+<form method="POST" action="{% url 'pictures-update' article_id=article_id %}">
     {% csrf_token %}
     <table class="table table-striped table-condensed">                
         {% for picture in select_page.object_list %}
