--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% if not user.is_authenticated and not current_object.published %}
-  <a href="{% url auth_login %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}</a>
+  <a href="{% url 'auth_login' %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}</a>
 {% else %}
 
 	<div class="content-view {{ current_object.get_object_name }} media detail">
