--- a/cyclope/templates/rosetta/pofile.html
+++ b/cyclope/templates/rosetta/pofile.html
@@ -15,18 +15,18 @@
 {# copied from the admin/base.html template #}
 
             {% block userlinks %}
-                {% url django-admindocs-docroot as docsroot %}
+                {% url 'django-admindocs-docroot' as docsroot %}
                 {% if docsroot %}
                     <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
                 {% endif %}
-                {% url admin:password_change as password_change_url %}
+                {% url 'admin:password_change' as password_change_url %}
                 {% if password_change_url %}
                     <a href="{{ password_change_url }}">
                 {% else %}
                     <a href="{{ root_path }}password_change/">
                 {% endif %}
                 {% trans 'Change password' %}</a> /
-                {% url admin:logout as logout_url %}
+                {% url 'admin:logout' as logout_url %}
                 {% if logout_url %}
                     <a href="{{ logout_url }}">
                 {% else %}
@@ -43,7 +43,7 @@
 
 {% block breadcumbs %}
     <div>
-        <a href="{% url admin:index %}">{% trans "Home" %}</a> &rsaquo; 
+        <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo; 
         {% trans "Translation" %}: {{ rosetta_i18n_lang_name }}
     </div>
     {% if not rosetta_i18n_write %}<p class="errornote read-only">{% trans "File is read-only: download the file when done editing!" %}</p>{% endif %}
