--- a/cyclope/apps/articles/templates/articles/article_labeled_icon.html
+++ b/cyclope/apps/articles/templates/articles/article_labeled_icon.html
@@ -1,4 +1,4 @@
-{% load i18n fb_versions cyclope_utils %}
+{% load i18n  cyclope_utils %}
 
 <div class="teaser_icon {% inline_content_classes %}">
 	<div class="thumbnail">
