--- a/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
@@ -1,4 +1,4 @@
-{% load fb_versions cyclope_utils %}
+{% load  cyclope_utils %}
 
   <div class="content-view contact labeled_icon">
     <a href="{% url 'contact-detail' contact.slug %}">
