--- a/cyclope/apps/contacts/templates/contacts/contact_teaser.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n fb_versions staticfiles %}
+{% load i18n  staticfiles %}
 <div class="content-view contact teaser contact-teaser">
    {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
     <div class="media">
