--- a/cyclope/apps/forum/templates/forum/topic_teaser.html
+++ b/cyclope/apps/forum/templates/forum/topic_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n fb_versions markup comments cyclope_utils %}
+{% load i18n  markup comments cyclope_utils %}
 
   <div class="content-view topic teaser topic-teaser {% teaser_layout_classes %}">
 
