--- a/cyclope/apps/media_widget/templates/media_widget/media_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_select.html
@@ -1,4 +1,4 @@
-{% load fb_versions staticfiles %}
+{% load  staticfiles %}
 
 {% include "media_widget/pagination_header.html" with widget='embed' %}
 
