--- a/cyclope/apps/media_widget/templates/media_widget/picture_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_select.html
@@ -1,4 +1,4 @@
-{% load fb_versions %}
+{% load  %}
 
 {% include "media_widget/pagination_header.html" with widget='pictures' pagina=select_page %}
 
