--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -1,5 +1,5 @@
 {% extends host_template %}
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils  %}
 {% block content %}
   <div class="content-view collection">
       {% include 'collections/collection_info.html' %}
