--- a/cyclope/core/user_profiles/templates/profiles/edit_profile.html
+++ b/cyclope/core/user_profiles/templates/profiles/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n fb_versions crispy_forms_tags %}
+{% load i18n  crispy_forms_tags %}
 
 {% block content%}
 
