--- a/cyclope/core/user_profiles/templates/user_profiles/profile_detail.html
+++ b/cyclope/core/user_profiles/templates/user_profiles/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n fb_versions cyclope_utils dbgettext_tags %}
+{% load i18n  cyclope_utils dbgettext_tags %}
 {% load url from future %}
 
 {% block content %}
