--- a/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
+++ b/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
@@ -1,4 +1,4 @@
-{% load i18n cyclope_utils fb_versions dbgettext_tags %}
+{% load i18n cyclope_utils  dbgettext_tags %}
 
   <div class="newsletter_teaser">
 <table border="0" cellpadding="0" cellspacing="0">
