--- a/cyclope/apps/articles/templates/articles/article_slideshow_item.html
+++ b/cyclope/apps/articles/templates/articles/article_slideshow_item.html
@@ -1,4 +1,4 @@
-{% load i18n fb_versions cyclope_utils dbgettext_tags %}
+{% load i18n  cyclope_utils dbgettext_tags %}
 
   <div class="article content-view">
 
