--- a/cyclope/apps/contacts/templates/contacts/contact_detail.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_detail.html
@@ -1,5 +1,5 @@
 {% extends host_template %}
-{% load comments i18n fb_versions cyclope_utils markup dbgettext_tags%}
+{% load comments i18n  cyclope_utils markup dbgettext_tags%}
 {% block content %}
 {% alias contact as 'current_object' %}
 
