--- a/cyclope/apps/forum/templates/forum/topic_detail.html
+++ b/cyclope/apps/forum/templates/forum/topic_detail.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load comments i18n fb_versions cyclope_utils markup dbgettext_tags%}
+{% load comments i18n  cyclope_utils markup dbgettext_tags%}
 
 {% block content %}
 
