--- a/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
@@ -1,4 +1,4 @@
-{% load fb_versions %}
+{% load  %}
 
 <form method="POST" action="{% url 'pictures-delete' article_id=article_id %}">
     {% csrf_token %}
