--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_slideshow_item.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_slideshow_item.html
@@ -1,5 +1,5 @@
 {% extends 'medialibrary/medialibrary_slideshow_base_item.html' %}
-{% load i18n fb_versions cyclope_utils dbgettext_tags %}
+{% load i18n  cyclope_utils dbgettext_tags %}
 
 {% block content %}
 <div style="width: 100%; height: 150px;">
