--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
@@ -1,4 +1,4 @@
-{% load i18n cyclope_utils fb_versions dbgettext_tags %}
+{% load i18n cyclope_utils  dbgettext_tags %}
 <div class="teaser_icon {% inline_content_classes %}">
 		<div class="thumbnail">
 			<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
