--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n cyclope_utils fb_versions dbgettext_tags %}
+{% load i18n cyclope_utils  dbgettext_tags %}
 
 {% block content %}
 <div class="content-view media {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
