--- a/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
+++ b/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils fb_versions dbgettext_tags %}
+{% load i18n cyclope_utils  dbgettext_tags %}
 
 {% block content %}
 <div class="newsletter_teaser">
