--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -1,5 +1,5 @@
 {% extends host_template %}
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils  %}
 
 {% comment %}
 When inserted in a layout region the host template used is just a wrapper (see inline_view.html).
