--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_newsletter_teaser_lateral.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_newsletter_teaser_lateral.html
@@ -1,4 +1,4 @@
-{% load i18n fb_versions cyclope_utils %}
+{% load i18n  cyclope_utils %}
 
   <div class="newsletter_teaser">
 <table border="0" cellpadding="0" cellspacing="0" >
