--- a/cyclope/core/collections/templates/collections/collection_info.html
+++ b/cyclope/core/collections/templates/collections/collection_info.html
@@ -1,4 +1,4 @@
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils  %}
 <div class="collection {{ collection.slug }}">
 	<div class="collection_header">
 		{% if collection.visible %}
