--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/newsletter.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/newsletter.html
@@ -1,4 +1,4 @@
-{% load layout i18n fb_versions cyclope_utils %}
+{% load layout i18n  cyclope_utils %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
 # Cyclope 3 GPL
