reemplazo masivo elimina el tag version de imagenes filebrowser esta deprecado, #142

--- a/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
+++ b/cyclope/apps/articles/templates/articles/article_newsletter_teaser_lateral.html
@@ -13,7 +13,7 @@
       {% if current_object.pictures.values %}
       {% with picture=current_object.pictures.values|first %}
       <a href="{% url 'article-detail' article.slug %}">
-        <img class="newsletter_image" src="{% version picture.image 'newsletter_teaser' %}" alt="{{ picture.name }}"/>
+        <img class="newsletter_image" src="{{ picture.image }}" alt="{{ picture.name }}"/>
       </a>
       {% endwith %}
       {% endif %}
