--- a/cyclope/apps/articles/templates/articles/article_carousel_item.html
+++ b/cyclope/apps/articles/templates/articles/article_carousel_item.html
@@ -5,7 +5,7 @@
   <a href="{% url 'article-detail' article.slug %}">
     {% if article.pictures %}
 	{% with article.pictures.all|first as first_pic %}
-        <img class="img-responsive" src="{% version first_pic.image.path 'carrousel_bootstrap'%}" alt="{{ article.name }}" border="0"/>
+        <img class="img-responsive" src="{{ first_pic.image.path }}" alt="{{ article.name }}" border="0"/>
 	{% endwith %}
     {% else %}
         <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" alt="" border="0"/>
