--- a/cyclope/apps/articles/templates/articles/article_newsletter_teaser_top.html
+++ b/cyclope/apps/articles/templates/articles/article_newsletter_teaser_top.html
@@ -9,7 +9,7 @@
       {% if current_object.pictures.values %}
       <a href="{% url 'article-detail' current_object.slug %}">
         {% with picture=current_object.pictures.values|first %}        
-        <img class="newsletter_image" src="{% version picture.image 'newsletter_teaser' %}" alt="{{ picture.name }}"/>
+        <img class="newsletter_image" src="{{ picture.image }}" alt="{{ picture.name }}"/>
         {% endwith %}
       </a>
       {% endif %}
