--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -12,7 +12,7 @@
 			{% with picture=article.pictures.values|first %}
 				<div class="teaser_icon_container">
 					<a href="{{ article.get_absolute_url }}" title="{{ picture.name }}">
-						<img class="teaser_icon img-responsive" src="{% version picture.image 'thumbnail' %}" alt="{{ picture.name }}" border="0"/>
+						<img class="teaser_icon img-responsive" src="{{ picture.image }}" alt="{{ picture.name }}" border="0"/>
 					</a>
 				</div>
 			{% endwith %}
