--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -19,7 +19,7 @@
 		{% if current_object.image %}
 			<div class="media-content">
 				{% if current_object.content_url %}<a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif%} >{% endif%}
-				<img align="center" src="{% version current_object.image.path 'big' %}"/>
+				<img align="center" src="{{ current_object.image.path }}"/>
 				{% if current_object.content_url %}</a>{% endif%}
 			</div>
 		{% endif %}
